Resource style, article, some icons, cleaning unused xml.

--- a/VAKidney/app/src/main/res/layout/activity_login.xml
+++ b/VAKidney/app/src/main/res/layout/activity_login.xml
@@ -121,8 +121,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorWhite"
             android:layout_marginTop="15dp"
-            android:textSize="15dp"
-            android:alpha="0.8"
+            android:textSize="15sp"
             android:gravity="center"
             android:text="Forgot Password?"
             />
@@ -136,7 +135,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/bg_login_btn"
             android:elevation="5dp"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
             android:text="Login"
@@ -152,9 +151,8 @@
             android:background="@drawable/bg_signup_btn"
             android:elevation="5dp"
             android:textAllCaps="false"
-            android:textSize="13dp"
+            android:textSize="14sp"
             android:layout_marginRight="5dp"
-            android:alpha="0.8"
             android:layout_marginLeft="5dp"
             android:text="New User ? Sign Up Now"
             android:textColor="@color/colorWhite" />
