--- a/VAKidney/app/src/main/res/drawable/bg_next_welcome.xml
+++ b/VAKidney/app/src/main/res/drawable/bg_next_welcome.xml
@@ -4,7 +4,7 @@
 
     <corners android:radius="@dimen/app_standard_corner_width"/>
 
-    <solid android:color="@android:color/transparent"/>
+    <solid android:color="@color/colorPrimary"/>
 
     <stroke android:width="2dp"  android:color="#40000000"/>
 
