--- a/VAKidney/app/src/main/res/layout/activity_welcome.xml
+++ b/VAKidney/app/src/main/res/layout/activity_welcome.xml
@@ -11,7 +11,7 @@
         android:id="@+id/welcomeScreenBeginning"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorLightGray"
         android:padding="@dimen/app_standard_padding">
 
         <LinearLayout
@@ -23,20 +23,22 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatImageView
-                android:layout_width="200dp"
-                android:layout_height="60dp"
-                app:srcCompat="@drawable/ic_va_health_logo" />
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                app:srcCompat="@drawable/logo_primary"
+                android:layout_marginBottom="@dimen/app_standard_padding"/>
 
             <TextView
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/app_standard_padding"
+                android:layout_margin="@dimen/app_standard_padding"
                 android:gravity="center"
                 android:lines="3"
                 android:maxLines="3"
                 android:text="@string/logo_text"
-                android:textColor="@color/colorWhite"
-                android:textSize="14dp" />
+                android:textColor="@color/text_black"
+                android:textSize="18dp" />
 
         </LinearLayout>
 
