--- a/VAKidney/app/src/main/res/layout/fragment_resource.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_resource.xml
@@ -9,9 +9,10 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/app_standard_padding"
+        android:paddingTop="@dimen/app_standard_padding"
         android:id="@+id/resourceListView"
         android:scrollbars="none"
+        android:clipToPadding="false"
         android:divider="@android:color/transparent"
         />
 
