--- a/VAKidney/app/src/main/res/layout/fragment_welcome1.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_welcome1.xml
@@ -18,6 +18,7 @@
         android:gravity="center">
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -52,6 +53,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/title_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -111,6 +113,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/title_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
@@ -171,6 +174,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/title_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
