--- a/VAKidney/app/src/main/res/layout/item_chart_menu.xml
+++ b/VAKidney/app/src/main/res/layout/item_chart_menu.xml
@@ -24,7 +24,7 @@
             android:gravity="center_vertical"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/text_black"
+            android:textColor="@color/colorPrimaryDark"
             android:text="Major"/>
         <View
             android:layout_width="match_parent"
