--- a/VAKidney/app/src/main/res/layout/item_grid_food_addnew.xml
+++ b/VAKidney/app/src/main/res/layout/item_grid_food_addnew.xml
@@ -19,6 +19,7 @@
             android:layout_height="90dp"
             android:layout_margin="@dimen/app_standard_padding"
             app:srcCompat="@drawable/ic_addmeal"
+            app:tint="@color/colorAccent"
             />
 
         <LinearLayout
