--- a/VAKidney/app/src/main/res/layout/fragment_home1.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_home1.xml
@@ -32,13 +32,26 @@
                 android:layout_height="100dp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                custom:arc_bottom_text="Weight Loss"
+                custom:arc_bottom_text=""
                 custom:arc_finished_color="#f3cf45"
                 custom:arc_progress="55"
                 custom:arc_text_color="@color/colorWhite"
                 custom:arc_unfinished_color="@color/colorWhite"
                 custom:icon_color="@color/colorWhite"
                 custom:inside_drawable="@drawable/ic_weight_loss" />
+
+            <TextView
+                android:id="@+id/arcProgressText1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Weight Loss"
+                android:lines="1"
+                android:textColor="@color/colorWhite"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_marginTop="-12dp"
+                android:layout_marginBottom="1dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -87,19 +100,33 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            android:id="@+id/arcLayout2">
+            android:id="@+id/arcLayout2"
+            android:layout_marginBottom="@dimen/app_standard_padding">
             <com.topcoder.vakidney.customview.ArcProgress
                 android:id="@+id/arcProgress2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="@dimen/app_standard_padding"
                 custom:inside_drawable="@drawable/ic_water_bottle"
-                custom:arc_bottom_text="Water Intake"
+                custom:arc_bottom_text=""
                 custom:icon_color="@color/colorWhite"
                 custom:arc_unfinished_color="@color/colorWhite"
                 custom:arc_finished_color="#bec292"
                 custom:arc_text_color="@color/colorWhite"
                 custom:arc_progress="55" />
+
+            <TextView
+                android:id="@+id/arcProgressText2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Water Intake"
+                android:lines="1"
+                android:textColor="@color/colorWhite"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_marginTop="-12dp"
+                android:layout_marginBottom="1dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -138,7 +165,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:id="@+id/arcLayout4">
+                android:id="@+id/arcLayout4"
+                android:layout_marginTop="@dimen/app_standard_padding">
 
             <com.topcoder.vakidney.customview.ArcProgress
                 android:id="@+id/arcProgress4"
@@ -147,14 +175,27 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 custom:inside_drawable="@drawable/ic_running"
-                custom:arc_bottom_text="Run"
+                custom:arc_bottom_text=""
                 custom:icon_color="@color/colorWhite"
                 custom:arc_finished_color="#ff7f32"
                 custom:arc_unfinished_color="@color/colorWhite"
                 custom:arc_text_color="@color/colorWhite"
                 custom:arc_progress="55" />
 
-            <LinearLayout
+                <TextView
+                    android:id="@+id/arcProgressText4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Run"
+                    android:lines="1"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="-12dp"
+                    android:layout_marginBottom="1dp"/>
+
+                <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -202,13 +243,26 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="@dimen/app_standard_padding"
-                custom:arc_bottom_text="Fruits/Veggies"
                 custom:arc_finished_color="#557630"
                 custom:arc_progress="55"
                 custom:arc_text_color="@color/colorWhite"
+                app:arc_bottom_text=""
                 custom:arc_unfinished_color="@color/colorWhite"
                 custom:icon_color="@color/colorWhite"
                 custom:inside_drawable="@drawable/ic_fruits_veggies" />
+
+            <TextView
+                android:id="@+id/arcProgressText3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Fruits/Veggies"
+                android:lines="1"
+                android:textColor="@color/colorWhite"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_marginTop="-12dp"
+                android:layout_marginBottom="1dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -217,7 +271,6 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-
                 <TextView
                     android:id="@+id/tvStat3"
                     android:layout_width="wrap_content"
@@ -225,18 +278,18 @@
                     android:gravity="center"
                     android:text="2/3"
                     android:textColor="@color/colorWhite"
-                    android:textSize="14dp"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvUnit3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="4dp"
                     android:gravity="center"
                     android:text="bowls"
                     android:textColor="@color/colorWhite"
-                    android:textSize="12dp" />
+                    android:textSize="12sp" />
 
 
             </LinearLayout>
