--- a/VAKidney/app/src/main/res/layout/fragment_workout.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_workout.xml
@@ -41,6 +41,7 @@
                 >
 
                 <TextView
+                    android:id="@+id/tvDataSync"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:text="Data Sync"
@@ -59,12 +60,33 @@
 
         </LinearLayout>
 
+
         <LinearLayout
-            android:background="@color/colorLightGray"
-            android:layout_height="1dp"
-            android:layout_marginBottom="@dimen/app_standard_padding"
             android:layout_width="match_parent"
-            />
+            android:layout_height="2dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:layout_marginBottom="@dimen/app_standard_padding"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="8dp"
+                android:layout_height="match_parent"
+                android:tint="@color/colorAccent"
+                android:src="@drawable/bg_triangle"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:layout_marginLeft="-4dp"
+                android:layout_marginRight="-4dp"/>
+            <ImageView
+                android:layout_width="8dp"
+                android:layout_height="match_parent"
+                android:rotation="180"
+                android:tint="@color/colorAccent"
+                android:src="@drawable/bg_triangle"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_height="wrap_content"
@@ -77,7 +99,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:gravity="center"
-                android:id="@+id/llSyncData"
+                android:id="@+id/tvSyncData"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
                 android:layout_marginLeft="@dimen/app_standard_padding"
@@ -97,6 +119,7 @@
                 />
 
             <TextView
+                android:id="@+id/tvManageDevice"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
@@ -136,7 +159,7 @@
                 android:id="@+id/arcRunning"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="18dp"
                 app:arc_finished_color="#ff7f32"
                 app:arc_progress="55"
                 app:arc_text_color="@color/colorDarkGray"
@@ -151,8 +174,9 @@
                 android:gravity="center"
                 android:text="Distance"
                 android:textColor="@color/colorDarkGray"
-                android:textSize="12dp"
-                android:textStyle="bold" />
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="2dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -173,7 +197,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/app_standard_padding"
+                    android:layout_marginLeft="4dp"
                     android:gravity="center"
                     android:text="miles"
                     android:textColor="@color/colorDarkGray"
@@ -183,15 +207,34 @@
             </LinearLayout>
 
             <LinearLayout
-                android:background="@color/colorLightGray"
-                android:layout_height="1dp"
-                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                />
+                android:layout_height="2dp"
+                android:paddingStart="@dimen/standard_padding_half"
+                android:paddingEnd="@dimen/standard_padding_half"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:tint="@color/colorAccent"
+                    android:src="@drawable/bg_triangle"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colorAccent"
+                    android:layout_marginLeft="-4dp"
+                    android:layout_marginRight="-4dp"/>
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:rotation="180"
+                    android:tint="@color/colorAccent"
+                    android:src="@drawable/bg_triangle"/>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/llSyncDistance"
+                android:id="@+id/tvSyncDistance"
                 android:layout_width="160dp"
                 android:layout_height="21dp"
                 android:layout_margin="@dimen/app_standard_padding"
@@ -201,7 +244,7 @@
                 android:gravity="center"
                 android:text="Sync Now"
                 android:textColor="@color/colorAccent"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
         </LinearLayout>
 
 
@@ -219,7 +262,7 @@
                 android:id="@+id/arcSteps"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="18dp"
                 app:arc_finished_color="#f3cf45"
                 app:arc_bottom_text=""
                 app:arc_progress="55"
@@ -235,7 +278,8 @@
                 android:gravity="center"
                 android:text="Steps"
                 android:textColor="@color/colorDarkGray"
-                android:textSize="12dp"
+                android:textSize="14sp"
+                android:layout_marginBottom="2dp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -258,7 +302,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/app_standard_padding"
+                    android:layout_marginLeft="4dp"
                     android:gravity="center"
                     android:text="steps"
                     android:textColor="@color/colorDarkGray"
@@ -269,13 +313,33 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/colorLightGray"
-                android:orientation="horizontal" />
+                android:layout_height="2dp"
+                android:paddingStart="@dimen/standard_padding_half"
+                android:paddingEnd="@dimen/standard_padding_half"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:tint="@color/colorAccent"
+                    android:src="@drawable/bg_triangle"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colorAccent"
+                    android:layout_marginLeft="-4dp"
+                    android:layout_marginRight="-4dp"/>
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:rotation="180"
+                    android:tint="@color/colorAccent"
+                    android:src="@drawable/bg_triangle"/>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/llSyncStep"
+                android:id="@+id/tvSyncStep"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/app_standard_padding"
@@ -285,7 +349,7 @@
                 android:gravity="center"
                 android:text="Sync Now"
                 android:textColor="@color/colorAccent"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
         </LinearLayout>
     </LinearLayout>
 
