--- a/VAKidney/app/src/main/res/layout/activity_welcome.xml
+++ b/VAKidney/app/src/main/res/layout/activity_welcome.xml
@@ -36,6 +36,7 @@
                 android:gravity="center"
                 android:lines="3"
                 android:maxLines="3"
+                android:lineSpacingExtra="@dimen/standard_padding_half"
                 android:text="@string/logo_text"
                 android:textColor="@color/text_black"
                 android:textSize="18dp" />
