--- a/VAKidney/app/src/main/res/layout/activity_main.xml
+++ b/VAKidney/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,6 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary"
-        android:weightSum="5.3"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -94,7 +93,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1"
+            android:layout_weight="0.9"
             android:gravity="center"
             >
 
@@ -125,7 +124,7 @@
                 android:gravity="center"
                 android:text="Home"
                 android:textColor="@color/brandBlueLight"
-                android:textSize="10sp" />
+                android:textSize="11sp" />
         </LinearLayout>
 
 
@@ -134,7 +133,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1"
+            android:layout_weight="0.9"
             android:gravity="center"
             >
 
@@ -165,7 +164,7 @@
                 android:gravity="center"
                 android:text="Chart"
                 android:textColor="@color/brandBlueLight"
-                android:textSize="10sp" />
+                android:textSize="11sp" />
         </LinearLayout>
 
 
@@ -174,7 +173,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1.3"
+            android:layout_weight="1.4"
             android:gravity="center"
             >
 
@@ -203,9 +202,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:gravity="center"
+                android:lines="1"
                 android:text="Recommendations"
                 android:textColor="@color/brandBlueLight"
-                android:textSize="10sp" />
+                android:textSize="11sp" />
         </LinearLayout>
 
 
@@ -245,7 +245,7 @@
                 android:gravity="center"
                 android:text="Food/Drug"
                 android:textColor="@color/brandBlueLight"
-                android:textSize="10sp" />
+                android:textSize="11sp" />
         </LinearLayout>
 
 
@@ -254,7 +254,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1"
+            android:layout_weight="0.9"
             android:gravity="center"
             >
 
@@ -284,7 +284,7 @@
                 android:gravity="center"
                 android:text="Activity"
                 android:textColor="@color/brandBlueLight"
-                android:textSize="10sp" />
+                android:textSize="11sp" />
         </LinearLayout>
 
 
