--- a/VAKidney/app/src/main/res/layout/activity_register.xml
+++ b/VAKidney/app/src/main/res/layout/activity_register.xml
@@ -139,7 +139,7 @@
                     android:layout_toRightOf="@+id/passwordIcon"
                     android:background="@android:color/transparent"
                     android:hint="PASSWORD"
-                    android:inputType="textEmailAddress"
+                    android:inputType="textPassword"
                     android:textColor="@color/colorWhite"
                     android:textColorHint="@color/colorWhite"
                     android:textCursorDrawable="@null"
@@ -182,7 +182,7 @@
                     android:layout_toRightOf="@+id/confirmIcon"
                     android:background="@android:color/transparent"
                     android:hint="CONFIRM PASSWORD"
-                    android:inputType="textEmailAddress"
+                    android:inputType="textPassword"
                     android:textColor="@color/colorWhite"
                     android:textColorHint="@color/colorWhite"
                     android:textCursorDrawable="@null"
